# handypy

./: README.md  cli.py  pyproject.toml
cli/: __init__.py  climenu.py
plots/: plots.py
src/handypy/cli/: __init__.py  cli_input.py
src/handypy/plots/: plots.py
