[project]
name = "HandyPy"
version = "0.0"
description = "A collection of useful Python scripts."
authors = []
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["termcolor>=2.4.0", "numpy>=1.24.0", "matplotlib>=3.7.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
